--- a/Parametric Insurance.ipynb
+++ b/Parametric Insurance.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded and processed successfully.\n",
+      "Date\n",
+      "2005-10-01    0.026840\n",
+      "2005-10-02    0.008593\n",
+      "2005-10-03    0.000900\n",
+      "2005-10-04    0.005847\n",
+      "2005-10-05    0.000000\n",
+      "Name: ERA5_RAIN (mm), dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "def load_and_process_data(file_path):\n",
     "    \"\"\"\n",
@@ -66,7 +81,7 @@
     "    \"\"\"\n",
     "    try:\n",
     "        df = pd.read_csv(file_path)\n",
-    "        df.columns = df.columns.str.strip().replace('\\n', '', regex=True)\n",
+    "        df.columns = df.columns.str.strip().str.replace('\\n', '', regex=True)\n",
     "    except FileNotFoundError:\n",
     "        print(f\"Error: The data file was not found at '{file_path}'\")\n",
     "        return None\n",
@@ -96,9 +111,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Annual Index Values (2005-2024):\n",
+      "Date\n",
+      "2005     0.604353\n",
+      "2006     7.662733\n",
+      "2007     0.119107\n",
+      "2008    21.294573\n",
+      "2009    96.561073\n",
+      "2010    21.949473\n",
+      "2011     1.097907\n",
+      "2012     2.822193\n",
+      "2013    37.160847\n",
+      "2014     4.059447\n",
+      "2015    11.707520\n",
+      "2016    39.705767\n",
+      "2017    16.734887\n",
+      "2018     0.648807\n",
+      "2019    42.793640\n",
+      "2020    21.469880\n",
+      "2021    48.936333\n",
+      "2022    55.713000\n",
+      "2023     1.511673\n",
+      "2024    49.812940\n",
+      "Name: Max 5-Day Rolling Sum (mm), dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "def calculate_annual_index(daily_data, window_size):\n",
     "    \"\"\"\n",
@@ -129,9 +174,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Product Design ---\n",
+      "Index Definition: Maximum 5-Day Rolling Cumulative Rainfall\n",
+      "Sum Insured per Acre: ₹50,000\n",
+      "\n",
+      "[A] Trigger Thresholds (based on historical data):\n",
+      "  - Tier 1 (Severe) (>80th percentile): 44.02 mm\n",
+      "  - Tier 2 (Extreme) (>90th percentile): 50.40 mm\n",
+      "  - Tier 3 (Catastrophic) (>95th percentile): 57.76 mm\n",
+      "\n",
+      "[B] Calibrated Payout Slabs (to achieve 5% premium rate):\n",
+      "  - Tier 1 (Severe): 8.62% of Sum Insured\n",
+      "  - Tier 2 (Extreme): 17.24% of Sum Insured\n",
+      "  - Tier 3 (Catastrophic): 34.48% of Sum Insured\n"
+     ]
+    }
+   ],
    "source": [
     "def design_triggers(annual_index, percentiles):\n",
     "    \"\"\"\n",
@@ -202,9 +267,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Historical Simulation (Back-testing) ---\n",
+      " Year Max 5-Day Sum (mm) Payout Tier Triggered Payout (% of SI) Payout per Acre (₹)\n",
+      " 2005               0.60                  None            0.00%                  ₹0\n",
+      " 2006               7.66                  None            0.00%                  ₹0\n",
+      " 2007               0.12                  None            0.00%                  ₹0\n",
+      " 2008              21.29                  None            0.00%                  ₹0\n",
+      " 2009              96.56 Tier 3 (Catastrophic)           34.48%             ₹17,241\n",
+      " 2010              21.95                  None            0.00%                  ₹0\n",
+      " 2011               1.10                  None            0.00%                  ₹0\n",
+      " 2012               2.82                  None            0.00%                  ₹0\n",
+      " 2013              37.16                  None            0.00%                  ₹0\n",
+      " 2014               4.06                  None            0.00%                  ₹0\n",
+      " 2015              11.71                  None            0.00%                  ₹0\n",
+      " 2016              39.71                  None            0.00%                  ₹0\n",
+      " 2017              16.73                  None            0.00%                  ₹0\n",
+      " 2018               0.65                  None            0.00%                  ₹0\n",
+      " 2019              42.79                  None            0.00%                  ₹0\n",
+      " 2020              21.47                  None            0.00%                  ₹0\n",
+      " 2021              48.94       Tier 1 (Severe)            8.62%              ₹4,310\n",
+      " 2022              55.71      Tier 2 (Extreme)           17.24%              ₹8,621\n",
+      " 2023               1.51                  None            0.00%                  ₹0\n",
+      " 2024              49.81       Tier 1 (Severe)            8.62%              ₹4,310\n"
+     ]
+    }
+   ],
    "source": [
     "def run_simulation(annual_index, triggers, payouts, sum_insured):\n",
     "    \"\"\"\n",
@@ -261,9 +355,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Final Premium Calculation Verification ---\n",
+      "Average Annual Payout (Pure Premium Rate): 0.0345 or 3.45%\n",
+      "Total Loading (Expenses + Risk Margin): 45%\n",
+      "Calculated Commercial Premium Rate: 0.0500 or 5.00%\n",
+      "\n",
+      "Final Calibrated Premium per Acre: ₹2,500.00\n",
+      "---------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\n--- Final Premium Calculation Verification ---\")\n",
     "avg_payout_percent = simulation_results['Payout (% of SI)'].mean() / 100\n",
